# telegram-analytics

./: README.md  pyproject.toml
src/: analyse.py  config.py  initialize_database.py  message_processor.py  process.py  process_messages.py
src/analysers/: analyser.py  database_analyser.py
src/entities/: message.py  tag.py
src/message_readers/: file_message_reader.py  message_reader.py
src/message_writers/: database_message_writer.py  message_writer.py
src/tag_extractors/: composed_tag_extractor.py  exercise_tag_extractor.py  keyword_tag_extractor.py  part_tag_extractor.py  tag_extractor.py
