[tool.poetry]
name = "telegram-analytics"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalleilv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
keybert = "^0.1.3"
jsonpickle = "^1.5.0"
python-dotenv = "^0.15.0"
progress = "^1.5"
click = "^7.1.2"
tabulate = "^0.8.7"
PyPika = "^0.47.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
